# habr_articles_theme_classification

./: .gitattributes  .gitignore  README.md
airflow_dags/: clickhouse.env  docker-compose.yaml
airflow_dags/csvs/: habr_dataset_13_09_2025_15_02.csv
airflow_dags/dags/: parse_ai_dag.py  parse_habr_dag.py  parse_hr_management_dag.py  parse_infosec_dag.py  parse_it_infrastructure_dag.py  parse_math_dag.py  save_to_csv_dag.py
app/: .pre-commit-config.yaml  .pylintrc  Dockerfile.backend  README.md  docker-compose.yaml  front.py  main.py  pyproject.toml  requirements.txt
app/frontend/: Dockerfile.frontend  front.py
app/src/: config.py  helpers.py  predictor.py  preprocess.py
app/src/api/: dependencies.py  routes.py
app/src/data_models/: api.py  predictions.py
app/tests/: conftest.py  test_predictor.py  test_preprocess.py
app/tests/data/: article.txt
notebooks/: README.md  baseline_and_rubert_comparison.ipynb
parsing/: Dockerfile  config.py  docker-compose.yaml  init-db.sql  main.py  pyproject.toml  rebuild.sh  requirements.txt
parsing/config/: airflow.cfg
parsing/dags/: parse_habr_dag.py
parsing/src/pipeline_tools/: data_models.py  db.py  errors.py  parsers.py
parsing/src/pipeline_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
parsing/src/pipeline_tools/parsers/: __init__.py  habr.py
parsing/src/pipeline_tools/pipeline_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
parsing/tests/: conftest.py  test_clickhouse.py  test_habr_parser.py
parsing/tests/data/: feed.json
