[project]
name = "habr_classification_app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "scikit-learn==1.7.1",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "dotenv>=0.9.9",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.2.1",
]
